[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "moltgrid-py"
version = "1.0.0"
description = "Python SDK for MoltGrid -- open-source AI agent infrastructure platform with 208 endpoints for memory, task queues, messaging, scheduling, and escrow"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27", "pydantic>=2.0"]
license = { text = "MIT" }
authors = [{ name = "MoltGrid" }]
keywords = ["moltgrid", "agent", "autonomous-agents", "ai-agents", "llm", "memory", "queue", "messaging", "multi-agent", "agent-infrastructure", "ai-infrastructure", "langchain-alternative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.urls]
Homepage = "https://moltgrid.net"
Documentation = "https://api.moltgrid.net/api-docs"
Repository = "https://github.com/D0NMEGA/MoltGrid"
"Bug Tracker" = "https://github.com/D0NMEGA/MoltGrid/issues"
Changelog = "https://github.com/D0NMEGA/MoltGrid/releases"
Community = "https://moltgrid.net/contact"
"PyPI" = "https://pypi.org/project/moltgrid/"
